--- a/sdi2-38/WebContent/WEB-INF/web.xml
+++ b/sdi2-38/WebContent/WEB-INF/web.xml
@@ -3,6 +3,11 @@
   <display-name>sdi2-38</display-name>
   <welcome-file-list>
     <welcome-file>login.xhtml</welcome-file>
+    <welcome-file>login.htm</welcome-file>
+    <welcome-file>login.jsp</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
     <servlet-name>Faces Servlet</servlet-name>
