Renombrado el proyecto

--- a/Proyecto 2015 - Paula Díaz Puertas/sdi2-31/.project
+++ b/Proyecto 2015 - Paula Díaz Puertas/sdi2-31/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>sdi2-31</name>
+	<name>Proyecto2015_sdi2-31</name>
 	<comment></comment>
 	<projects>
 	</projects>
