COnsultar viajes acabado

--- a/sdi2-38/data/test.properties
+++ b/sdi2-38/data/test.properties
@@ -1,8 +1,4 @@
 #HSQL Database Engine 2.2.9
-<<<<<<< HEAD
-#Sun Mar 27 19:57:10 CEST 2016
-=======
-#Sat Mar 26 19:00:40 CET 2016
->>>>>>> 12d319a69c9d17df43dcf129b83de796a8fc6d4a
+#Mon Mar 28 12:31:07 CEST 2016
 version=2.2.9
-modified=no
+modified=yes
