--- a/sdi2-38/data/test.properties
+++ b/sdi2-38/data/test.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.2.9
-#Mon Mar 28 19:11:41 CEST 2016
+#Mon Mar 28 21:05:50 CEST 2016
 version=2.2.9
-modified=yes
+modified=no
