--- a/sdi2-38/data/test.properties
+++ b/sdi2-38/data/test.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.2.9
-#Mon Mar 28 22:09:53 CEST 2016
+#Tue Mar 29 11:32:27 CEST 2016
 version=2.2.9
-modified=no
+modified=yes
