--- a/sdi2-38/data/test.properties
+++ b/sdi2-38/data/test.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.2.9
-#Tue Mar 29 12:00:55 CEST 2016
+#Tue Mar 29 17:28:39 CEST 2016
 version=2.2.9
-modified=yes
+modified=no
