--- a/sdi2-38/data/test.properties
+++ b/sdi2-38/data/test.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.2.9
-#Tue Mar 29 23:54:29 CEST 2016
+#Wed Mar 30 13:23:31 CEST 2016
 version=2.2.9
-modified=no
+modified=yes
