--- a/sdi2-38/data/test.properties
+++ b/sdi2-38/data/test.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.2.9
-#Thu Mar 31 11:44:13 CEST 2016
+#Thu Mar 31 12:56:36 CEST 2016
 version=2.2.9
-modified=yes
+modified=no
