--- a/sdi2-38/dataFinal/test.properties
+++ b/sdi2-38/dataFinal/test.properties
@@ -1,4 +1,4 @@
-HSQL Database Engine 2.2.9
-#Fri Apr 01 22:20:23 CEST 2016
+#HSQL Database Engine 2.2.9
+#Sat Apr 02 18:42:41 CEST 2016
 version=2.2.9
-modified=no
+modified=yes
