Eliminados comentarios pasa de test y copias de dataFinal

--- a/sdi2-38/dataFinal/test.properties
+++ b/sdi2-38/dataFinal/test.properties
@@ -1,5 +1,4 @@
-
 #HSQL Database Engine 2.2.9
-#Sat Apr 02 21:01:48 CEST 2016
+#Sun Apr 03 12:11:02 CEST 2016
 version=2.2.9
-modified=no
+modified=yes
