--- a/sdi2-38/data/test.properties
+++ b/sdi2-38/data/test.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.2.9
-#Fri Apr 01 01:39:58 CEST 2016
+#Sun Apr 03 12:12:02 CEST 2016
 version=2.2.9
-modified=no
+modified=yes
